[package]
name = "snapshot-downloader"
version = "0.1.0"
edition = "2021"
description = "A tool to download and setup Cronos node snapshots"
authors = ["Cronos Team"]

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio-util = { version = "0.7", features = ["io"] }
indicatif = "0.17"
tar = "0.4"
flate2 = "1.1"
lz4 = "1.28"
clap = { version = "4.5", features = ["derive"] }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
tokio-tar = "0.3"
tempfile = "3.18"
fs_extra = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
regex = "1.10" 
